--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
-
+@font-face {
+    font-family: 'NotoSans';
+    src: url('NotoSans-Regular.ttf') format('ttf'),
+    font-weight: normal;
+    font-style: normal;
+}
 
 * {
     box-sizing: border-box; 
@@ -8,7 +12,7 @@
 }
 
 body {
-    font-family: 'Noto Sans', "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI",Roboto, Oxygen, Ubuntu, Cantarell,"Open Sans","Helvetica Neue", sans-serif; 
+    font-family: 'NotoSans', "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI",Roboto, Oxygen, Ubuntu, Cantarell,"Open Sans","Helvetica Neue", sans-serif; 
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
