--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,23 @@ body {
 
 /* Header */
 header {
-    padding: 20px;
-    background: #333;
+    padding: 0px;
+    background-image: url('images/background-image.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: -5cqw;
     color: #fff;
     text-align: center;
+}
+
+/* Header overlay */
+header .overlay {
+    position: relative;
+    background-color: rgba(64, 64, 64, 0.5);
+    color: #fff;
+    text-align: center;
+    padding: 20px;
 }
 
 /* Navigation */
@@ -40,7 +53,7 @@ nav ul li a {
 .nav-bar {
     min-height: 50px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding: 0 auto;
 }
@@ -64,6 +77,7 @@ nav ul li a {
     display: none;
     cursor: pointer;
     margin-right: auto;
+    padding-left: 1em;
 }
 
 .bar {
