--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'NotoSans';
-    src: url('NotoSans-Regular.ttf') format('ttf'),
+    src: url('font/NotoSans-Regular.ttf') format('ttf'),
     font-weight: normal;
     font-style: normal;
 }
@@ -102,8 +102,8 @@ main {
     grid-gap: 20px;
 }
 
-/* Image Gallery */
-.image-gallery {
+/* Album Gallery */
+.album-gallery {
     display: grid; 
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     overflow: hidden;
@@ -111,33 +111,32 @@ main {
     padding: 20px;
 }
 
-.image-gallery figure {
+.album-gallery figure {
     width: 300px;
     height: auto;
 }
 
-.image-gallery img {
+.album-gallery img {
     width: 300px;
     height: auto;
 }
 
-.image-gallery figcaption {
+.album-gallery figcaption {
     text-align: center;
     padding: 10px 0;
 }
 
 /* Make the images in image-gallery grayscale, then coloured when hovered over */
-.image-gallery .album-cover {
+.album-gallery .album-cover {
     /* convert image to grayscale */
     filter: grayscale(100%);
     transition: filter 0.3s ease-in-out;
 }
 
-.image-gallery .album-cover:hover {
+.album-gallery .album-cover:hover {
     /* remove the grayscale filter on hover */
     filter: grayscale(0%);
 }
-
 
 /* Videos */
 .grid-container {
@@ -296,33 +295,25 @@ footer {
 /* For mobile screens */
 @media screen and (max-width: 768px) {
 
-    /* Shows the image gallery as one grid column in mobile screens */
-    .image-gallery {
-        grid-template-columns: 1fr;
-        overflow-x: hidden;
-    }
-
-    .image-gallery figure {
-        max-width: 300px;
-        height: auto;
-    }
-
     /* Display the hamburger menu when the screen is <768 px */
     .hamburger {
         display: block;
-        
+        z-index: 20;
     }
 
     .hamburger.active .bar:nth-child(2) {
         opacity: 0;
+        z-index: 20;
     }
 
     .hamburger.active .bar:nth-child(1) {
         transform: translateY(8px) rotate(45deg);
+        z-index: 20;
     }
 
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
+        z-index: 20;
     }
 
     .nav-menu {
@@ -335,13 +326,43 @@ footer {
         width: 50%;
         text-align: center;
         transition: 0.5s ease;
+        z-index: 15;
     }
 
     .nav-item {
         margin: 16px 0;
+        z-index: 15;
     }
 
     .nav-menu.active {
         left: 0;
+        z-index: 15;
+    }
+
+    /* Shows the image gallery as one grid column in mobile screens */
+    .album-gallery {
+        grid-template-columns: 1fr;
+        overflow-x: hidden;
+        z-index: 10;
+        display: flex;
+        justify-content: center;  /* This will horizontally center the child elements */
+        align-items: center;  /* This will vertically center the child elements */
+        flex-wrap: wrap; /* This allows the flex items to wrap onto multiple lines if needed */
+        }
+        
+    }
+
+    .album-gallery figure {
+        max-width: 300px;
+        height: auto;
+        z-index: 10;
+    }
+
+    /* Makes .grid-wrapper for Videos and Sidebar one column in mobile screens */
+    .grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        padding: 20px;
     }
 }
